<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationDialog">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/corner_small"
        app:cardElevation="@dimen/elevation_disable">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_information_title"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_medium"
                android:text="@string/lorem_short"
                android:textColor="@color/colorBlack" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:listDivider" />

            <TextView
                android:id="@+id/text_information_subtitle"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:padding="@dimen/padding_medium"
                android:text="@string/lorem_long"
                android:textColor="@color/colorBlack" />

            <Button
                android:id="@+id/button_information_confirm"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/oke"
                android:onClick="onConfirmButtonClick"
                android:stateListAnimator="@null"
                android:textColorHint="@color/colorWhite"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>